k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-api
  namespace: banking
  labels:
    app: banking-api
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: http
    protocol: TCP
  selector:
    app: banking-api
